finally fixed scrolling/jumping issue

--- a/internal/static/map.css
+++ b/internal/static/map.css
@@ -1,6 +1,5 @@
 #mapBase {
 	height: 100%;
-	overflow: hidden;
 }
 
 #map {
